--- a/src/ui/information.ui
+++ b/src/ui/information.ui
@@ -14,7 +14,15 @@
               <class name="property"/>
             </style>
             <property name="title" translatable="yes">Name</property>
-            <property name="subtitle" translatable="yes">Sub</property>
+          </object>
+        </child>
+
+        <child>
+          <object class="AdwActionRow" id="config_id">
+            <style>
+              <class name="property"/>
+            </style>
+            <property name="title" translatable="yes">ID</property>
           </object>
         </child>
 
@@ -24,64 +32,74 @@
               <class name="property"/>
             </style>
             <property name="title" translatable="yes">Version</property>
-            <property name="subtitle" translatable="yes">Version</property>
           </object>
         </child>
 
         <child>
-          <object class="AdwActionRow">
+          <object class="AdwActionRow" id="config_description">
             <style>
               <class name="property"/>
             </style>
             <property name="title" translatable="yes">Description</property>
-            <property name="subtitle" translatable="yes">Description</property>
           </object>
         </child>
 
         <child>
-          <object class="AdwActionRow">
+          <object class="AdwActionRow" id="config_author">
             <style>
               <class name="property"/>
             </style>
             <property name="title" translatable="yes">Author</property>
-            <property name="subtitle" translatable="yes">Author</property>
           </object>
         </child>
 
         <child>
-          <object class="AdwActionRow">
+          <object class="AdwActionRow" id="config_homepage">
+            <style>
+              <class name="property"/>
+            </style>
+            <property name="title" translatable="yes">Homepage</property>
+          </object>
+        </child>
+      </object>
+    </child>
+    <child>
+      <object class="AdwPreferencesGroup">
+        <property name="title" translatable="yes">Source</property>
+        <child>
+          <object class="AdwActionRow" id="config_source">
             <style>
               <class name="property"/>
             </style>
             <property name="title" translatable="yes">Source</property>
-            <property name="subtitle" translatable="yes">Source</property>
+          </object>
+        </child>
+
+        <child>
+          <object class="AdwActionRow" id="config_subfolder">
+            <style>
+              <class name="property"/>
+            </style>
+            <property name="title" translatable="yes">Subfolder</property>
           </object>
         </child>
       </object>
     </child>
 
     <child>
-      <object class="AdwSpinner" id="spinner">
-        <property name="halign">3</property>
-        <property name="valign">3</property>
-        <property name="width-request">48</property>
-        <property name="height-request">48</property>
-      </object>
-    </child>
-
-    <child>
-      <object class="AdwPreferencesGroup">
+      <object class="AdwPreferencesGroup" id="open_dotfiles_content">
         <property name="title" translatable="yes">Content</property>
+        <property name="visible">false</property>
         <child>
           <object class="AdwActionRow">
             <property name="title" translatable="yes">Open Dotfiles</property>
-            <property name="activatable-widget">toast_button</property>
+            <property name="activatable-widget">btn_show_dotfiles</property>
             <child type="suffix">
-              <object class="GtkButton" id="toast_button">
+              <object class="GtkButton" id="btn_show_dotfiles">
                 <property name="halign">3</property>
                 <property name="valign">3</property>
-                <property name="label" translatable="yes">show toast</property>
-                <property name="icon-name">bread-symbolic</property>
+                <property name="label" translatable="yes">Show Dotfiles</property>
+                <property name="action-name">app.showdotfiles</property>
               </object>
             </child>
           </object>
