--- a/src/ui/restore.ui
+++ b/src/ui/restore.ui
@@ -1,12 +1,20 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <interface>
-  <template class="DotfilesSettings" parent="GtkBox">
+  <template class="Restore" parent="GtkBox">
     <property name="orientation">1</property>
     <property name="margin-end">100</property>
     <property name="margin-start">100</property>
     <property name="spacing">10</property>
     <child>
-      <object class="GtkListBox" id="settings_group">
+      <object class="GtkLabel">
+        <property name="label">Restore</property>
+        <style>
+          <class name="title-1"/>
+        </style>
+      </object>
+    </child>
+    <child>
+      <object class="GtkListBox" id="restore_group">
         <property name="selection-mode">0</property>
         <property name="margin-bottom">20</property>
         <style>
