--- a/src/ui/window.ui
+++ b/src/ui/window.ui
@@ -122,7 +122,7 @@
                 <!-- Page: Check Dependencies -->
 
 
-                <!-- Page: Replacements -->
+                <!-- Page: Settings -->
                 <child>
                   <object class="GtkStackPage">
                     <property name="name">page3</property>
@@ -133,7 +133,25 @@
                         <property name="margin-start">15</property>
                         <property name="margin-end">15</property>
                         <child>
-                          <object class="DotfilesSettings" id="config_settings"/>
+                          <object class="Settings" id="config_settings"/>
+                        </child>
+                      </object>
+                    </property>
+                  </object>
+                </child>
+
+                <!-- Page: Restore -->
+                <child>
+                  <object class="GtkStackPage">
+                    <property name="name">page4</property>
+                    <property name="title" translatable="yes">Restore</property>
+                    <property name="child">
+                      <object class="AdwStatusPage">
+                        <property name="valign">1</property>
+                        <property name="margin-start">15</property>
+                        <property name="margin-end">15</property>
+                        <child>
+                          <object class="Restore" id="config_restore"/>
                         </child>
                       </object>
                     </property>
