--- a/src/ui/information.ui
+++ b/src/ui/information.ui
@@ -15,7 +15,6 @@
     </child>
     <child>
       <object class="AdwPreferencesGroup">
-        <property name="title" translatable="yes">General</property>
         <child>
           <object class="AdwActionRow" id="config_name">
             <style>
@@ -101,7 +100,7 @@
     </child>
     <child>
       <object class="AdwPreferencesGroup">
-        <property name="title" translatable="yes">Source</property>
+        <property name="title" translatable="yes">Dotfiles</property>
         <child>
           <object class="AdwActionRow" id="config_source">
             <style>
@@ -119,27 +118,15 @@
             <property name="title" translatable="yes">Subfolder</property>
           </object>
         </child>
-      </object>
-    </child>
 
-    <child>
-      <object class="AdwPreferencesGroup" id="open_dotfiles_content">
-        <property name="title" translatable="yes">Content</property>
-        <property name="visible">false</property>
         <child>
-          <object class="AdwActionRow">
-            <property name="title" translatable="yes">Show downloaded dotfiles</property>
-            <property name="activatable-widget">btn_show_dotfiles</property>
-            <child type="suffix">
-              <object class="GtkButton" id="btn_show_dotfiles">
-                <property name="halign">3</property>
-                <property name="valign">3</property>
-                <property name="label" translatable="yes">Open</property>
-                <property name="action-name">app.showdotfiles</property>
-              </object>
-            </child>
+          <object class="AdwButtonRow" id="open_dotfiles_content">
+            <property name="title" translatable="yes">Open Download Folder</property>
+            <property name="visible">false</property>
+            <property name="action-name">app.showdotfiles</property>
           </object>
         </child>
+
       </object>
     </child>
 
