--- a/src/ui/window.ui
+++ b/src/ui/window.ui
@@ -37,29 +37,31 @@
               </object>
             </child>
             <child type="center">
+            </child>
+            <child type="end">
               <object class="GtkBox">
-                <property name="halign">1</property>
+                <property name="spacing">10</property>
                 <child>
                   <object class="AdwSpinner" id="spinner">
-                    <property name="halign">1</property>
-                    <property name="valign">3</property>
                     <property name="width-request">32</property>
                     <property name="height-request">32</property>
                     <property name="visible">false</property>
+                    <property name="margin-bottom">15</property>
                   </object>
                 </child>
-              </object>
-            </child>
-            <child type="end">
-              <object class="GtkButton" id="wizzard_next_btn">
-                <property name="name">regular</property>
-                <property name="label" translatable="yes">Next</property>
-                <property name="action-name">app.wizzard_next</property>
-                <property name="margin-end">15</property>
-                <property name="margin-bottom">15</property>
-                <style>
-                  <class name="suggested-action"/>
-                </style>
+                <child>
+                  <object class="GtkButton" id="wizzard_next_btn">
+                    <property name="name">regular</property>
+                    <property name="label" translatable="yes">Next</property>
+                    <property name="action-name">app.wizzard_next</property>
+                    <property name="margin-end">15</property>
+                    <property name="margin-bottom">15</property>
+                    <style>
+                      <class name="suggested-action"/>
+                    </style>
+                  </object>
+                </child>
+
               </object>
             </child>
           </object>
@@ -113,6 +115,24 @@
                         <property name="margin-end">15</property>
                         <child>
                           <object class="Information" id="config_information"/>
+                        </child>
+                      </object>
+                    </property>
+                  </object>
+                </child>
+
+                <!-- Page: Backup -->
+                <child>
+                  <object class="GtkStackPage">
+                    <property name="name">page8</property>
+                    <property name="title" translatable="yes">Backup</property>
+                    <property name="child">
+                      <object class="AdwStatusPage">
+                        <property name="valign">1</property>
+                        <property name="margin-start">15</property>
+                        <property name="margin-end">15</property>
+                        <child>
+                          <object class="Backup" id="config_backup"/>
                         </child>
                       </object>
                     </property>
