--- a/src/ui/information.ui
+++ b/src/ui/information.ui
@@ -2,8 +2,8 @@
 <interface>
   <template class="Information" parent="GtkBox">
     <property name="orientation">1</property>
-    <property name="margin-end">100</property>
-    <property name="margin-start">100</property>
+    <property name="margin-end">20</property>
+    <property name="margin-start">20</property>
     <property name="spacing">10</property>
     <child>
       <object class="GtkLabel">
@@ -13,6 +13,17 @@
         </style>
       </object>
     </child>
+
+    <!-- Description -->
+    <child>
+      <object class="GtkLabel">
+        <property name="label">Install custom dotfiles and configurations easily on your system. configurations easily on your system.</property>
+        <property name="margin-bottom">2</property>
+        <property name="justify">2</property>
+        <property name="wrap">1</property>
+      </object>
+    </child>
+
     <child>
       <object class="AdwPreferencesGroup">
         <child>
