--- a/src/ui/window.ui
+++ b/src/ui/window.ui
@@ -87,7 +87,7 @@
                 <!-- Page: Load Configuration -->
                 <child>
                   <object class="GtkStackPage">
-                    <property name="name">page1</property>
+                    <property name="name">page_load</property>
                     <property name="title" translatable="yes">Load Configuration</property>
                     <property name="child">
                       <object class="AdwStatusPage">
@@ -104,7 +104,7 @@
                 <!-- Page: Information -->
                 <child>
                   <object class="GtkStackPage">
-                    <property name="name">page2</property>
+                    <property name="name">page_information</property>
                     <property name="title" translatable="yes">Information</property>
                     <property name="child">
                       <object class="AdwStatusPage">
@@ -120,7 +120,7 @@
                 <!-- Page: Backup -->
                 <child>
                   <object class="GtkStackPage">
-                    <property name="name">page8</property>
+                    <property name="name">page_backup</property>
                     <property name="title" translatable="yes">Backup</property>
                     <property name="child">
                       <object class="AdwStatusPage">
@@ -139,7 +139,7 @@
                 <!-- Page: Settings -->
                 <child>
                   <object class="GtkStackPage">
-                    <property name="name">page3</property>
+                    <property name="name">page_settings</property>
                     <property name="title" translatable="yes">Settings</property>
                     <property name="child">
                       <object class="AdwStatusPage">
@@ -155,7 +155,7 @@
                 <!-- Page: Restore -->
                 <child>
                   <object class="GtkStackPage">
-                    <property name="name">page4</property>
+                    <property name="name">page_restore</property>
                     <property name="title" translatable="yes">Restore</property>
                     <property name="child">
                       <object class="AdwStatusPage">
