--- a/src/ui/information.ui
+++ b/src/ui/information.ui
@@ -17,7 +17,7 @@
     <!-- Description -->
     <child>
       <object class="GtkLabel">
-        <property name="label">Install custom dotfiles and configurations easily on your system. configurations easily on your system.</property>
+        <property name="label">The following dotfiles configuration will be downloaded and installed.</property>
         <property name="margin-bottom">2</property>
         <property name="justify">2</property>
         <property name="wrap">1</property>
