--- a/src/ui/window.ui
+++ b/src/ui/window.ui
@@ -37,6 +37,11 @@
               </object>
             </child>
             <child type="center">
+              <object class="GtkProgressBar" id="progress_bar">
+                <property name="fraction">0</property>
+                <property name="show-text">true</property>
+                <property name="margin-bottom">24</property>
+              </object>
             </child>
             <child type="end">
               <object class="GtkBox">
