--- a/src/ui/backup.ui
+++ b/src/ui/backup.ui
@@ -16,7 +16,7 @@
     <!-- Description -->
     <child>
       <object class="GtkLabel">
-        <property name="label">Install custom dotfiles and configurations easily on your system. configurations easily on your system.</property>
+        <property name="label">A backup of the existing configuration is strongly recommended. The following files and folders can be backed up.</property>
         <property name="margin-bottom">2</property>
         <property name="justify">2</property>
         <property name="wrap">1</property>
