--- a/src/ui/installation.ui
+++ b/src/ui/installation.ui
@@ -16,7 +16,7 @@
     <!-- Description -->
     <child>
       <object class="GtkLabel">
-        <property name="label">The dotfiles are prepared for the installation.</property>
+        <property name="label">The dotfiles are now prepared for installation.</property>
         <property name="margin-bottom">2</property>
         <property name="justify">2</property>
         <property name="wrap">1</property>
