--- a/src/ui/protect.ui
+++ b/src/ui/protect.ui
@@ -16,7 +16,7 @@
     <!-- Description -->
     <child>
       <object class="GtkLabel">
-        <property name="label">Install custom dotfiles and configurations easily on your system. configurations easily on your system.</property>
+        <property name="label">If you have already customized these dotfiles, you can protect the corresponding files and folders here and exclude them from the update.</property>
         <property name="margin-bottom">2</property>
         <property name="justify">2</property>
         <property name="wrap">1</property>
