--- a/src/ui/restore.ui
+++ b/src/ui/restore.ui
@@ -16,7 +16,7 @@
     <!-- Description -->
     <child>
       <object class="GtkLabel">
-        <property name="label">Install custom dotfiles and configurations easily on your system. configurations easily on your system.</property>
+        <property name="label">Selected settings from the current installation of the dotfiles can be transferred to the new installation.</property>
         <property name="margin-bottom">2</property>
         <property name="justify">2</property>
         <property name="wrap">1</property>
