--- a/src/ui/loadconfiguration.ui
+++ b/src/ui/loadconfiguration.ui
@@ -53,7 +53,8 @@
     </child>
 
     <child>
-      <object class="GtkBox">
+      <object class="GtkBox" id="installed_dotfiles_box">
+        <property name="visible">false</property>
         <property name="orientation">vertical</property>
         <child>
           <object class="GtkLabel">
