--- a/src/ui/loadconfiguration.ui
+++ b/src/ui/loadconfiguration.ui
@@ -32,8 +32,8 @@
     <!-- Description -->
     <child>
       <object class="GtkLabel">
-        <property name="label">Install custom dotfiles and configurations easily on your system. configurations easily on your system.</property>
-        <property name="margin-bottom">2</property>
+        <property name="label">Install custom dotfiles and configurations easily on your system.</property>
+        <property name="margin-bottom">30</property>
         <property name="justify">2</property>
         <property name="wrap">1</property>
       </object>
