--- a/src/ui/window.ui
+++ b/src/ui/window.ui
@@ -13,6 +13,14 @@
       <object class="AdwToolbarView">
         <child type="top">
           <object class="AdwHeaderBar">
+            <child type="start">
+              <object class="GtkButton" id="btn_add_project">
+                <property name="label" translatable="yes">Create Project</property>
+                <property name="visible">false</property>
+                <property name="css-classes">suggested-action</property>
+                <signal name="clicked" handler="on_add_project_action"/>
+              </object>
+            </child>
             <child type="end">
               <object class="GtkMenuButton">
                 <property name="primary">True</property>
